lib/src/bindings.dart


  void cpArbiterCallWildcardPostSolveA(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardPostSolveA(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardPostSolveAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardPostSolveA');
  late final _cpArbiterCallWildcardPostSolveA = _cpArbiterCallWildcardPostSolveAPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  void cpArbiterCallWildcardPostSolveB(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardPostSolveB(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardPostSolveBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardPostSolveB');
  late final _cpArbiterCallWildcardPostSolveB = _cpArbiterCallWildcardPostSolveBPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  void cpArbiterCallWildcardSeparateA(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardSeparateA(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardSeparateAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardSeparateA');
  late final _cpArbiterCallWildcardSeparateA = _cpArbiterCallWildcardSeparateAPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  void cpArbiterCallWildcardSeparateB(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardSeparateB(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardSeparateBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardSeparateB');
  late final _cpArbiterCallWildcardSeparateB = _cpArbiterCallWildcardSeparateBPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  ffi.Pointer<cpBody> cpBodyAlloc() {
    return _cpBodyAlloc();
  }

  late final _cpBodyAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function()>>('cpBodyAlloc');
  late final _cpBodyAlloc = _cpBodyAllocPtr.asFunction<ffi.Pointer<cpBody> Function()>();

  ffi.Pointer<cpBody> cpBodyInit(
    ffi.Pointer<cpBody> body,
    double mass,
    double moment,
  ) {
    return _cpBodyInit(
      body,
      mass,
      moment,
    );
  }

  late final _cpBodyInitPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpBody>, cpFloat, cpFloat)>>('cpBodyInit');
  late final _cpBodyInit = _cpBodyInitPtr.asFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpBody>, double, double)>();

  ffi.Pointer<cpBody> cpBodyNewKinematic() {
    return _cpBodyNewKinematic();
  }

  late final _cpBodyNewKinematicPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function()>>('cpBodyNewKinematic');
  late final _cpBodyNewKinematic = _cpBodyNewKinematicPtr.asFunction<ffi.Pointer<cpBody> Function()>();

  ffi.Pointer<cpBody> cpBodyNewStatic() {
    return _cpBodyNewStatic();
  }

  late final _cpBodyNewStaticPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function()>>('cpBodyNewStatic');
  late final _cpBodyNewStatic = _cpBodyNewStaticPtr.asFunction<ffi.Pointer<cpBody> Function()>();

  void cpBodyDestroy(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyDestroy(
      body,
    );
  }

  late final _cpBodyDestroyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>)>>('cpBodyDestroy');
  late final _cpBodyDestroy = _cpBodyDestroyPtr.asFunction<void Function(ffi.Pointer<cpBody>)>();

  void cpBodyActivate(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyActivate(
      body,
    );
  }

  late final _cpBodyActivatePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>)>>('cpBodyActivate');
  late final _cpBodyActivate = _cpBodyActivatePtr.asFunction<void Function(ffi.Pointer<cpBody>)>();

  void cpBodyActivateStatic(
    ffi.Pointer<cpBody> body,
    ffi.Pointer<cpShape> filter,
  ) {
    return _cpBodyActivateStatic(
      body,
      filter,
    );
  }

  late final _cpBodyActivateStaticPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, ffi.Pointer<cpShape>)>>('cpBodyActivateStatic');
  late final _cpBodyActivateStatic = _cpBodyActivateStaticPtr.asFunction<void Function(ffi.Pointer<cpBody>, ffi.Pointer<cpShape>)>();

  void cpBodySleep(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodySleep(
      body,
    );
  }

  late final _cpBodySleepPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>)>>('cpBodySleep');
  late final _cpBodySleep = _cpBodySleepPtr.asFunction<void Function(ffi.Pointer<cpBody>)>();

  void cpBodySleepWithGroup(
    ffi.Pointer<cpBody> body,
    ffi.Pointer<cpBody> group,
  ) {
    return _cpBodySleepWithGroup(
      body,
      group,
    );
  }

  late final _cpBodySleepWithGroupPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>)>>('cpBodySleepWithGroup');
  late final _cpBodySleepWithGroup = _cpBodySleepWithGroupPtr.asFunction<void Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>)>();

  int cpBodyIsSleeping(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyIsSleeping(
      body,
    );
  }

  late final _cpBodyIsSleepingPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpBody>)>>('cpBodyIsSleeping');
  late final _cpBodyIsSleeping = _cpBodyIsSleepingPtr.asFunction<int Function(ffi.Pointer<cpBody>)>();

  int cpBodyGetType(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetType(
      body,
    );
  }

  late final _cpBodyGetTypePtr = _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<cpBody>)>>('cpBodyGetType');
  late final _cpBodyGetType = _cpBodyGetTypePtr.asFunction<int Function(ffi.Pointer<cpBody>)>();

  void cpBodySetType(
    ffi.Pointer<cpBody> body,
    int type,
  ) {
    return _cpBodySetType(
      body,
      type,
    );
  }

  late final _cpBodySetTypePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, ffi.Int32)>>('cpBodySetType');
  late final _cpBodySetType = _cpBodySetTypePtr.asFunction<void Function(ffi.Pointer<cpBody>, int)>();

  ffi.Pointer<cpSpace> cpBodyGetSpace(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetSpace(
      body,
    );
  }

  late final _cpBodyGetSpacePtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpSpace> Function(ffi.Pointer<cpBody>)>>('cpBodyGetSpace');
  late final _cpBodyGetSpace = _cpBodyGetSpacePtr.asFunction<ffi.Pointer<cpSpace> Function(ffi.Pointer<cpBody>)>();

  double cpBodyGetMass(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetMass(
      body,
    );
  }

  late final _cpBodyGetMassPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyGetMass');
  late final _cpBodyGetMass = _cpBodyGetMassPtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodySetMass(
    ffi.Pointer<cpBody> body,
    double m,
  ) {
    return _cpBodySetMass(
      body,
      m,
    );
  }

  late final _cpBodySetMassPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat)>>('cpBodySetMass');
  late final _cpBodySetMass = _cpBodySetMassPtr.asFunction<void Function(ffi.Pointer<cpBody>, double)>();

  double cpBodyGetMoment(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetMoment(
      body,
    );
  }

  late final _cpBodyGetMomentPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyGetMoment');
  late final _cpBodyGetMoment = _cpBodyGetMomentPtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodySetMoment(
    ffi.Pointer<cpBody> body,
    double i,
  ) {
    return _cpBodySetMoment(
      body,
      i,
    );
  }

  late final _cpBodySetMomentPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat)>>('cpBodySetMoment');
  late final _cpBodySetMoment = _cpBodySetMomentPtr.asFunction<void Function(ffi.Pointer<cpBody>, double)>();

  cpVect cpBodyGetCenterOfGravity(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetCenterOfGravity(
      body,
    );
  }

  late final _cpBodyGetCenterOfGravityPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>)>>('cpBodyGetCenterOfGravity');
  late final _cpBodyGetCenterOfGravity = _cpBodyGetCenterOfGravityPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>)>();

  void cpBodySetCenterOfGravity(
    ffi.Pointer<cpBody> body,
    cpVect cog,
  ) {
    return _cpBodySetCenterOfGravity(
      body,
      cog,
    );
  }

  late final _cpBodySetCenterOfGravityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodySetCenterOfGravity');
  late final _cpBodySetCenterOfGravity = _cpBodySetCenterOfGravityPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect)>();

  void cpBodySetVelocity(
    ffi.Pointer<cpBody> body,
    cpVect velocity,
  ) {
    return _cpBodySetVelocity(
      body,
      velocity,
    );
  }

  late final _cpBodySetVelocityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodySetVelocity');
  late final _cpBodySetVelocity = _cpBodySetVelocityPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect)>();

  cpVect cpBodyGetForce(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetForce(
      body,
    );
  }

  late final _cpBodyGetForcePtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>)>>('cpBodyGetForce');
  late final _cpBodyGetForce = _cpBodyGetForcePtr.asFunction<cpVect Function(ffi.Pointer<cpBody>)>();

  void cpBodySetForce(
    ffi.Pointer<cpBody> body,
    cpVect force,
  ) {
    return _cpBodySetForce(
      body,
      force,
    );
  }

  late final _cpBodySetForcePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodySetForce');
  late final _cpBodySetForce = _cpBodySetForcePtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect)>();

  double cpBodyGetAngle(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetAngle(
      body,
    );
  }

  late final _cpBodyGetAnglePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyGetAngle');
  late final _cpBodyGetAngle = _cpBodyGetAnglePtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodySetAngle(
    ffi.Pointer<cpBody> body,
    double a,
  ) {
    return _cpBodySetAngle(
      body,
      a,
    );
  }

  late final _cpBodySetAnglePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat)>>('cpBodySetAngle');
  late final _cpBodySetAngle = _cpBodySetAnglePtr.asFunction<void Function(ffi.Pointer<cpBody>, double)>();

  double cpBodyGetAngularVelocity(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetAngularVelocity(
      body,
    );
  }

  late final _cpBodyGetAngularVelocityPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyGetAngularVelocity');
  late final _cpBodyGetAngularVelocity = _cpBodyGetAngularVelocityPtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodySetAngularVelocity(
    ffi.Pointer<cpBody> body,
    double angularVelocity,
  ) {
    return _cpBodySetAngularVelocity(
      body,
      angularVelocity,
    );
  }

  late final _cpBodySetAngularVelocityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat)>>('cpBodySetAngularVelocity');
  late final _cpBodySetAngularVelocity = _cpBodySetAngularVelocityPtr.asFunction<void Function(ffi.Pointer<cpBody>, double)>();

  double cpBodyGetTorque(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetTorque(
      body,
    );
  }
